--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,12 @@
 {
   "manifest_version": 2,
   "name": "Enhanced Network Tab",
-  "version": "1.7.5",
+  "version": "1.7.6",
   "description": "A lightweight security analysis tool for capturing and modifying HTTP/S requests",
+  
+  "web_accessible_resources": [
+    "jsrepository.json"
+  ],
   
   "permissions": [
     "webRequest",
